k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ugc-polls
  labels:
    app.kubernetes.io/name: ugc-polls
