k8s/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: ugc-polls-web
  namespace: ugc-polls
  labels:
    app.kubernetes.io/name: ugc-polls
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ugc-polls
    app.kubernetes.io/component: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http-nginx
